--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ collections:
 
 
 # Build settings
-# theme: minima
-# plugins:
-#   - jekyll-feed
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
